On dec 26 from Madison PC trying out git instructions using git bash

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+ Hooray, now that I got here, what's next?
 </p>
 
 </body>
